--- a/css/output.css
+++ b/css/output.css
@@ -13,12 +13,6 @@
     --color-black: #000;
     --color-white: #fff;
     --spacing: 0.25rem;
-    --container-3xs: 16rem;
-    --container-2xl: 42rem;
-    --container-3xl: 48rem;
-    --container-7xl: 80rem;
-    --text-2xl: 1.5rem;
-    --text-2xl--line-height: calc(2 / 1.5);
     --text-3xl: 1.875rem;
     --text-3xl--line-height: calc(2.25 / 1.875);
     --text-4xl: 2.25rem;
@@ -188,9 +182,6 @@
   .relative {
     position: relative;
   }
-  .top-1 {
-    top: calc(var(--spacing) * 1);
-  }
   .top-7 {
     top: calc(var(--spacing) * 7);
   }
@@ -202,9 +193,6 @@
   }
   .left-\[13px\] {
     left: 13px;
-  }
-  .z-10 {
-    z-index: 10;
   }
   .container {
     width: 100%;
@@ -224,38 +212,11 @@
       max-width: 96rem;
     }
   }
-  .m-auto {
-    margin: auto;
-  }
   .mx-2 {
     margin-inline: calc(var(--spacing) * 2);
   }
-  .mx-3 {
-    margin-inline: calc(var(--spacing) * 3);
-  }
   .my-5 {
     margin-block: calc(var(--spacing) * 5);
-  }
-  .my-6 {
-    margin-block: calc(var(--spacing) * 6);
-  }
-  .my-7 {
-    margin-block: calc(var(--spacing) * 7);
-  }
-  .my-8 {
-    margin-block: calc(var(--spacing) * 8);
-  }
-  .me-5 {
-    margin-inline-end: calc(var(--spacing) * 5);
-  }
-  .mt-5 {
-    margin-top: calc(var(--spacing) * 5);
-  }
-  .mt-auto {
-    margin-top: auto;
-  }
-  .mb-4 {
-    margin-bottom: calc(var(--spacing) * 4);
   }
   .mb-5 {
     margin-bottom: calc(var(--spacing) * 5);
@@ -281,32 +242,11 @@
   .h-6 {
     height: calc(var(--spacing) * 6);
   }
-  .h-8 {
-    height: calc(var(--spacing) * 8);
-  }
-  .h-12 {
-    height: calc(var(--spacing) * 12);
-  }
   .h-16 {
     height: calc(var(--spacing) * 16);
   }
-  .h-20 {
-    height: calc(var(--spacing) * 20);
-  }
-  .h-24 {
-    height: calc(var(--spacing) * 24);
-  }
-  .h-28 {
-    height: calc(var(--spacing) * 28);
-  }
-  .h-32 {
-    height: calc(var(--spacing) * 32);
-  }
   .h-36 {
     height: calc(var(--spacing) * 36);
-  }
-  .h-40 {
-    height: calc(var(--spacing) * 40);
   }
   .h-\[50px\] {
     height: 50px;
@@ -314,53 +254,14 @@
   .h-auto {
     height: auto;
   }
-  .h-dvh {
-    height: 100dvh;
-  }
   .h-screen {
     height: 100vh;
-  }
-  .w-2 {
-    width: calc(var(--spacing) * 2);
-  }
-  .w-2\.5 {
-    width: calc(var(--spacing) * 2.5);
-  }
-  .w-2xl {
-    width: var(--container-2xl);
-  }
-  .w-3 {
-    width: calc(var(--spacing) * 3);
-  }
-  .w-3\.5 {
-    width: calc(var(--spacing) * 3.5);
-  }
-  .w-3xl {
-    width: var(--container-3xl);
-  }
-  .w-3xs {
-    width: var(--container-3xs);
   }
   .w-6 {
     width: calc(var(--spacing) * 6);
   }
-  .w-7xl {
-    width: var(--container-7xl);
-  }
-  .w-8 {
-    width: calc(var(--spacing) * 8);
-  }
-  .w-10 {
-    width: calc(var(--spacing) * 10);
-  }
   .w-16 {
     width: calc(var(--spacing) * 16);
-  }
-  .w-44 {
-    width: calc(var(--spacing) * 44);
-  }
-  .w-\[100px\] {
-    width: 100px;
   }
   .w-\[110px\] {
     width: 110px;
@@ -371,17 +272,8 @@
   .w-dvh {
     width: 100dvh;
   }
-  .w-fit {
-    width: fit-content;
-  }
   .w-full {
     width: 100%;
-  }
-  .w-max {
-    width: max-content;
-  }
-  .w-min {
-    width: min-content;
   }
   .w-screen {
     width: 100vw;
@@ -392,17 +284,11 @@
   .transform {
     transform: var(--tw-rotate-x) var(--tw-rotate-y) var(--tw-rotate-z) var(--tw-skew-x) var(--tw-skew-y);
   }
-  .cursor-pointer {
-    cursor: pointer;
-  }
   .resize {
     resize: both;
   }
   .flex-wrap {
     flex-wrap: wrap;
-  }
-  .content-center {
-    align-content: center;
   }
   .items-center {
     align-items: center;
@@ -422,10 +308,6 @@
   .rounded-full {
     border-radius: calc(infinity * 1px);
   }
-  .rounded-b-full {
-    border-bottom-right-radius: calc(infinity * 1px);
-    border-bottom-left-radius: calc(infinity * 1px);
-  }
   .border {
     border-style: var(--tw-border-style);
     border-width: 1px;
@@ -436,38 +318,14 @@
   .bg-\[\#55AD9B\] {
     background-color: #55AD9B;
   }
-  .bg-\[\#756AB6\] {
-    background-color: #756AB6;
-  }
   .bg-\[\#A8DADC\] {
     background-color: #A8DADC;
-  }
-  .bg-\[\#AC87C5\] {
-    background-color: #AC87C5;
   }
   .bg-\[\#D8EFD3\] {
     background-color: #D8EFD3;
   }
-  .bg-\[\#E0AED0\] {
-    background-color: #E0AED0;
-  }
-  .bg-\[\#E63946\] {
-    background-color: #E63946;
-  }
   .bg-\[\#F1F8E8\] {
     background-color: #F1F8E8;
-  }
-  .bg-\[\#F1FAEE\] {
-    background-color: #F1FAEE;
-  }
-  .bg-\[\#FFB4A2\] {
-    background-color: #FFB4A2;
-  }
-  .bg-\[\#FFCDB2\] {
-    background-color: #FFCDB2;
-  }
-  .bg-\[\#FFE5E5\] {
-    background-color: #FFE5E5;
   }
   .bg-white {
     background-color: var(--color-white);
@@ -486,60 +344,11 @@
   .fill-white {
     fill: var(--color-white);
   }
-  .p-4 {
-    padding: calc(var(--spacing) * 4);
-  }
-  .p-5 {
-    padding: calc(var(--spacing) * 5);
-  }
   .p-8 {
     padding: calc(var(--spacing) * 8);
   }
-  .p-10 {
-    padding: calc(var(--spacing) * 10);
-  }
-  .px-6 {
-    padding-inline: calc(var(--spacing) * 6);
-  }
-  .py-3 {
-    padding-block: calc(var(--spacing) * 3);
-  }
-  .py-4 {
-    padding-block: calc(var(--spacing) * 4);
-  }
-  .py-5 {
-    padding-block: calc(var(--spacing) * 5);
-  }
-  .py-11 {
-    padding-block: calc(var(--spacing) * 11);
-  }
-  .pt-6 {
-    padding-top: calc(var(--spacing) * 6);
-  }
-  .pt-10 {
-    padding-top: calc(var(--spacing) * 10);
-  }
-  .pt-16 {
-    padding-top: calc(var(--spacing) * 16);
-  }
-  .pt-20 {
-    padding-top: calc(var(--spacing) * 20);
-  }
-  .pt-28 {
-    padding-top: calc(var(--spacing) * 28);
-  }
-  .pb-5 {
-    padding-bottom: calc(var(--spacing) * 5);
-  }
   .text-center {
     text-align: center;
-  }
-  .text-right {
-    text-align: right;
-  }
-  .text-2xl {
-    font-size: var(--text-2xl);
-    line-height: var(--tw-leading, var(--text-2xl--line-height));
   }
   .text-3xl {
     font-size: var(--text-3xl);
@@ -741,38 +550,10 @@
       }
     }
   }
-  .hover\:bg-\[\#8174A0\] {
-    &:hover {
-      @media (hover: hover) {
-        background-color: #8174A0;
-      }
-    }
-  }
-  .hover\:bg-\[\#A888B5\] {
-    &:hover {
-      @media (hover: hover) {
-        background-color: #A888B5;
-      }
-    }
-  }
   .hover\:bg-\[\#AAB99A\] {
     &:hover {
       @media (hover: hover) {
         background-color: #AAB99A;
-      }
-    }
-  }
-  .hover\:bg-\[\#EFB6C8\] {
-    &:hover {
-      @media (hover: hover) {
-        background-color: #EFB6C8;
-      }
-    }
-  }
-  .hover\:bg-\[\#F1F8E8\] {
-    &:hover {
-      @media (hover: hover) {
-        background-color: #F1F8E8;
       }
     }
   }
@@ -781,6 +562,54 @@
       &::after {
         content: var(--tw-content);
         width: 50px;
+      }
+    }
+  }
+  .dark\:bg-\[\#\#101707\] {
+    &:where(.dark, .dark *) {
+      background-color: ##101707;
+    }
+  }
+  .dark\:bg-\[\#51a994\] {
+    &:where(.dark, .dark *) {
+      background-color: #51a994;
+    }
+  }
+  .dark\:bg-\[\#152d10\] {
+    &:where(.dark, .dark *) {
+      background-color: #152d10;
+    }
+  }
+  .dark\:bg-\[\#101707\] {
+    &:where(.dark, .dark *) {
+      background-color: #101707;
+    }
+  }
+  .dark\:bg-\[\#235658\] {
+    &:where(.dark, .dark *) {
+      background-color: #235658;
+    }
+  }
+  .dark\:text-\[\#ffffff\] {
+    &:where(.dark, .dark *) {
+      color: #ffffff;
+    }
+  }
+  .dark\:hover\:bg-\[\#4A7856\] {
+    &:where(.dark, .dark *) {
+      &:hover {
+        @media (hover: hover) {
+          background-color: #4A7856;
+        }
+      }
+    }
+  }
+  .dark\:hover\:bg-\[\#5A7D7C\] {
+    &:where(.dark, .dark *) {
+      &:hover {
+        @media (hover: hover) {
+          background-color: #5A7D7C;
+        }
       }
     }
   }
